# modaic

./: .generated-files.txt  .gitattributes  .gitignore  .prettierignore  404.html  AGENTS.md  Batch Error Log.jsonl  CONTRIBUTING.md  LICENSE  Makefile  README.md  README_DEPLOYMENT.md  auto-capping-plan.md  check_ids.py  context.py  cursor.md  deps.txt  example.env  example.yml  index.db  index.html  main.py  mkdocs.yml  mkdocs_old.yml  my_hidden_module3.py  my_module1.py  my_module2.py  my_module4.py  objects.inv  output.parquet  package-lock.json  package.json  program_new.json  program_orig.json  prompt.txt  push_old.py  pydoc-markdown.yaml  pydoc-markdown3.yaml  pyproject.toml  reproduce_user_issue.py  (+27 more)
.codex/environments/: environment.toml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
benchmarks/: hidden_field_serialization.ipynb
curssor/: README.md  adapter.py  demo.py  registry.py
custom_theme/: main.html  theme.yml
data.lmdb/: data.mdb  lock.mdb
docs/: docs.json  dspy-intellisense.mdx  index.md  index.mdx  mintlify_tips.mdx  style.css
examples/: fireworks_long.py  modaic_concepts.ipynb  return_messages_example.py
limits/: openai.txt
modaic/: __init__.py  auto.py  client.py  config.py  constants.py  hub.py  module_utils.py  observability.py  precompiled.py  probe.py  s_signature.py  utils.py
outer/: agent.json
reference_old/: precompiled_agent.md  sidebar.json
scratch/: intellisense_test.py
scripts/: pydoc_onchange.js  test_fallback_arbiters_dev.py  trigger-doc-sync.py
search/: search_index.json
site/: 404.html  index.html  objects.inv  sitemap.xml
src/modaic-client/: README.md  pyproject.toml
src/modaic-client/modaic_client/: __init__.py  client.py  config.py  schemas.py
src/modaic-sdk/: README.md  pyproject.toml
src/modaic-sdk/modaic/: __init__.py  _litellm_provider.py  auto.py  constants.py  exceptions.py  hub.py  lm.py  module_utils.py  observability.py  precompiled.py  probe.py  safe_lm.py  serializers.py  types.py  utils.py
src/modaic-sdk/modaic/batch/: AGENTS.md  __init__.py  _experimental.py  adapters.py  batch.py  clients.py  enqueued_limits.py  lmdb_cache.py  modal_client.py  modal_job.py  progress.py  redis.py  runner.py  storage.py  token_counting.py  types.py  vllm_job.py  vllm_job2.py  writer.py
src/modaic-sdk/modaic/batch/clients/: __init__.py  anthropic.py  azure.py  base.py  fireworks.py  openai.py  together.py  vertex.py  vllm.py
src/modaic-sdk/modaic/batch/scripts/: gen_with_batch.py  gen_with_server.py  generate_responses.py  generate_responses_modal.py
src/modaic-sdk/modaic/programs/: arbiters.py  predict.py  utils.py
src/modaic-sdk/tests/artifacts/temp/test_precompiled/: config.json
test6.json/: config.json
test_data/: file1.txt  file2.txt  file3.txt
tests/: conftest.py  modal_app.py  test_auto.py  test_auto_agent.py  test_autoagent.py  test_batch.py  test_batch_integration.py  test_context.py  test_examples.py  test_hub_git.py  test_litellm_provider.py  test_precompiled.py  test_predict.py  test_probe.py  test_programs.py  test_s_signature.py  test_table.py  test_types.py  test_vectordb.py  traces.jsonl  utils.py
tests/artifacts/test_repos/failing_repo/: compile.py  pyproject.toml
tests/artifacts/test_repos/failing_repo/agent/: agent.py  mod.py
tests/artifacts/test_repos/failing_repo/program/: program.py
tests/artifacts/test_repos/nested_repo_2/: compile.py  pyproject.toml
tests/artifacts/test_repos/nested_repo_2/agent/: agent.py  retriever.py
tests/artifacts/test_repos/nested_repo_2/agent/tools/: unused_tool.py  used_tool.py
tests/artifacts/test_repos/nested_repo_2/agent/tools/google/: google_search.py  not_imported.py
tests/artifacts/test_repos/nested_repo_2/agent/tools/jira/: jira_api_tools.py
tests/artifacts/test_repos/nested_repo_2/agent/unused_folder/: unused_module1.py
tests/artifacts/test_repos/nested_repo_2/agent/utils/: used.py
tests/artifacts/test_repos/nested_repo_2/api/: unused_api.py  used_api.py
tests/artifacts/test_repos/nested_repo_2/program/: config.py  program.py
tests/artifacts/test_repos/nested_repo_2/program/utils/: unused.py
tests/artifacts/test_repos/nested_repo_2/tests/artifacts/temp/modaic_cache/sync/tyrin/nested_repo_2/: LICENSE  __init__.py  auto_classes.json  compile.py  config.json  program.json  pyproject.toml  unused_but_included_folder
tests/artifacts/test_repos/nested_repo_2/tests/artifacts/temp/modaic_cache/sync/tyrin/nested_repo_2/program/: __init__.py  config.py  program.py  retriever.py
tests/artifacts/test_repos/nested_repo_2/tests/artifacts/temp/modaic_cache/sync/tyrin/nested_repo_2/program/tools/: __init__.py
tests/artifacts/test_repos/nested_repo_2/tests/artifacts/temp/modaic_cache/sync/tyrin/nested_repo_2/program/tools/google/: __init__.py  google_search.py
tests/artifacts/test_repos/nested_repo_2/tests/artifacts/temp/modaic_cache/sync/tyrin/nested_repo_2/program/tools/jira/: __init__.py  jira_api_tools.py
tests/artifacts/test_repos/nested_repo_2/tests/artifacts/temp/modaic_cache/sync/tyrin/nested_repo_2/program/utils/: __init__.py  second_degree_import.py  unused_but_included.py  used.py
tests/artifacts/test_repos/nested_repo_2/utils/: unused_util.py  used_util.py
tests/artifacts/test_repos/nested_repo_3/: pyproject.toml
tests/artifacts/test_repos/nested_repo_3/agent/: agent.py  retriever.py
tests/artifacts/test_repos/nested_repo_3/agent/tools/google/: not_imported.py
tests/artifacts/test_repos/nested_repo_3/agent/tools/jira/: unused_jira_tool.py
tests/artifacts/test_repos/nested_repo_3/agent/unused_folder/: unused_module1.py  unused_module2.py
tests/artifacts/test_repos/nested_repo_3/agent/utils/: second_degree_import.py  unused.py
tests/artifacts/test_repos/nested_repo_3/program/: program.py
tests/artifacts/test_repos/nested_repo_3/program/unused_folder/: unused_module2.py
tests/artifacts/test_repos/simple_repo_with_compile/: agent.py  compile.py  pyproject.toml
tests/artifacts/test_repos/simple_repo_with_compile/agent/: agent.py  mod.py
(+443 files in other folders)
