[project]
name = "modaic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dspy>=2.6.27",
    "duckdb>=1.3.2",
    "openpyxl>=3.1.5",
    "pillow>=11.3.0",
    "pymilvus>=2.5.14",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.30.0",
    "mkdocs-material>=9.6.16",
    "mkdocstrings[python]>=0.30.0",
    "pytest>=8.4.1",
    "ruff>=0.12.7",
]
examples = [
    "langchain-text-splitters>=0.3.9",
    "pinecone>=7.3.0",
]


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
