[project]
name = "modaic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aenum>=3.1.16",
    "dspy>=2.6.27",
    "duckdb>=1.3.2",
    "gitpython>=3.1.45",
    "langchain-text-splitters>=0.3.9",
    "openpyxl>=3.1.5",
    "pillow>=11.3.0",
    "pinecone>=7.3.0",
    "pymilvus>=2.5.14",
    "tomlkit>=0.13.3",
]

[dependency-groups]
dev = [
    "colorama>=0.4.6",
    "ipykernel>=6.30.0",
    "mkdocs-material>=9.6.16",
    "mkdocstrings[python]>=0.30.0",
    "pydoc-markdown>=4.8.2",
    "pdoc>=15.0.4",
    "pytest>=8.4.1",
    "ruff>=0.12.7",
]
examples = [
    "langchain-text-splitters>=0.3.9",
    "pinecone>=7.3.0",
]

[project.optional-dependencies]
pinecone = ["pinecone>=7.3.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = [
    "modaic.tools*",
]
