[project]
name = "modaic-client"
dynamic = ["version"]
description = "Modaic client SDK"
authors = [{ name = "Tyrin", email = "tyrin@modaic.dev" }, {name = "Farouk", email = "farouk@modaic.dev"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10,<3.14"
dependencies = [
    "httpx>=0.27.0",
    "platformdirs>=4.3.8",
    "pydantic-settings>=2.13.0",
]

[project.urls]
Homepage = "https://github.com/modaic-ai/modaic"
Modaic = "https://www.modaic.dev"
Docs = "https://docs.modaic.dev"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
root = "../.."

[tool.hatch.build.targets.wheel]
packages = ["modaic_client"]