[project]
name = "modaic"
dynamic = ["version"]
description = "Modaic, a python framework for packaging and reproducing DSPy programs"
authors = [{ name = "Tyrin", email = "tyrin@modaic.dev" }, {name = "Farouk", email = "farouk@modaic.dev"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10,<3.14"
dependencies = [
    "modaic-client",
    "dspy>=3.1.0",
    "gitpython>=3.1.45",
    "safetensors>=0.7.0",
    "tomlkit>=0.13.3",
    "python-frontmatter>=1.1.0",
]

[project.optional-dependencies]
batch = [
    "anthropic>=0.40.0",
    "duckdb>=1.2.0",
    "httpx>=0.27.0",
    "openai>=1.0.0",
    "pandas",
    "modal",
    "together>=2.0.0a17",
    "datasets"
]

anthropic = [
    "anthropic>=0.40.0",
    "duckdb>=1.2.0",
    "httpx>=0.27.0",
]

openai = [
    "duckdb>=1.2.0",
    "openai>=1.0.0",
]

azure = [
    "duckdb>=1.2.0",
    "openai>=1.0.0",
]

together = [
    "duckdb>=1.2.0",
    "together>=2.0.0a17",
]

fireworks = [
    "duckdb>=1.2.0",
    "httpx>=0.27.0",
]

modal = [
    "duckdb>=1.2.0",
    "pandas",
    "modal",
]


[project.urls]
Homepage = "https://github.com/modaic-ai/modaic"
Modaic = "https://www.modaic.dev"
Docs = "https://docs.modaic.dev"

[tool.uv.sources]
modaic-client = { workspace = true }

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
root = "../.."

[tool.hatch.build.targets.sdist]
include = ["modaic"]

[tool.hatch.build.targets.wheel]
packages = ["modaic"]
