[project]
name = "failing-repo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dspy",
    "modaic",
    "praw",
]

[tool.uv.sources]
modaic = { workspace = true }

[tool.modaic.include]
dependencies = ["sagemaker", "discord.py"]
files = ["include_me_too.txt", "include_me.py"]

[tool.modaic.exclude]
