[project]
name = "nested-repo-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dspy",
    "modaic",
]

[tool.uv.sources]
modaic = { workspace = true }

[tool.modaic.include]
dependencies = ["praw", "sagemaker"]
files = ["program/utils/unused_but_included.py", "unused_but_included_folder"]