[project]
name = "nested-repo-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dspy",
    "modaic",
]

[dependency-groups]
dev = [
    "praw",
]

[tool.uv.sources]
modaic = { workspace = true }

[tool.modaic.include]
files = ["program/utils/unused_but_included.py", "program/tools/unused_but_included2.py"]