[project]
name = "simple-repo-with-compile"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dspy",
    "modaic",
    "praw",
]

[tool.uv.sources]
modaic = { workspace = true }

[tool.modaic.include]
files = ["include_me_too.txt"]

[tool.modaic.exclude]
dependencies = ["praw", "sagemaker"]